Fixed Footer alignment

--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,10 @@ body {
 }
 
 a {
-    text-decoration: none;
-    font-size: 18px;
-    color: whitesmoke;
-    font-family: SnappyDresser, sans-serif;
+  text-decoration: none;
+  font-size: 18px;
+  color: whitesmoke;
+  font-family: SnappyDresser, sans-serif;
 }
 
 #header {
@@ -195,7 +195,7 @@ a {
 
 #footer-text {
   height: 50px;
-  padding-top: 15px;
+  line-height: 50px;
   font-style: italic;
 }
 
